--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "nativewind": "latest",
     "react": "18.1.0",
-    "react-native": "^0.71.4"
+    "react-native": "^0.71.4",
+    "react-router-native": "^6.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
