--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
-    "nativewind": "latest",
-    "react": "18.1.0",
+    "nativewind": "lratest",
+    "react": "18.2.0",
     "react-native": "^0.71.4",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-redux": "^8.0.5",
     "react-router-native": "^6.9.0"
   },
   "devDependencies": {
