--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
     "nativewind": "lratest",
     "react": "18.2.0",
     "react-native": "^0.71.4",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.5",
-    "react-router-native": "^6.9.0",
-    "react-native-gesture-handler": "~2.8.0",
-    "expo-image-picker": "~14.0.2"
+    "react-router-native": "^6.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
