--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.5",
-    "react-router-native": "^6.9.0"
+    "react-router-native": "^6.9.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
